vpc/sg.tf
### SG VPC nonprod-vpc #####
resource "aws_security_group" "sg-vpc" {
  name        = "sg access"
  description = "sg inbound traffic"
  vpc_id      = "${aws_vpc.staging-vpc.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "sg-vpc"
    Init = "terraform"
    Recipe  = "${var.IAC_REPO_BRANCH}"
  }
}
